--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 settings:
-  title: 'Status Page'
+  title: '网站状态监测'
   url: 'https://status-page.eidam.dev' # used for Slack messages
   logo: logo-192x192.png # image in ./public/ folder
   daysInHistogram: 60 # number of days you want to display in histogram
@@ -16,7 +16,7 @@ settings:
 
 monitors:
   - id: www-cloudflare-com # unique identifier
-    name: www.cloudflare.com
+    name: Cloudflare
     description: 'Built for anything connected to the Internet.' # default=empty
     url: 'https://workers.cloudflare.com/' # URL to fetch
     method: GET # default=GET
